# opengl_study

./: .gitignore
test1/: CMakeLists.txt
test1/src/: main.cpp
test2/: CMakeLists.txt
test2/src/: main.cpp
